# gsheet_bot

./: .env-example  .gitignore  pyproject.toml
aiogram_sheet_app/: bot.py
aiogram_sheet_app/config/: config.py
aiogram_sheet_app/handlers/: __init__.py  other_handlers.py  user_handlers.py
aiogram_sheet_app/services/: __init__.py  google_sheets.py
