[tool.poetry]
name = "sheet_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gspread = "^6.1.4"
oauth2client = "^4.1.3"
aiogram = "^3.15.0"
environs = "^11.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
